--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,9 +2,5 @@
   "compilerOptions": {
     "target": "es6"
   },
-  "include": [
-    "*.js",
-    "**/*.js",
-    "/Users/marte/.vscode/extensions/samplavigne.p5-vscode-1.2.15/p5types/global.d.ts"
-  ]
+  "include": ["*.js", "**/*.js", "/Users/marte/.vscode/extensions/samplavigne.p5-vscode-1.2.15/p5types/global.d.ts"]
 }
